--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.8",
     "@reduxjs/toolkit": "^2.11.2",
+    "axios": "^1.13.5",
     "firebase": "^12.9.0",
+    "formik": "^2.4.9",
     "jsonwebtoken": "^9.0.3",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-redux": "^9.2.0"
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
