fix: create profile

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,6 +53,13 @@
         "../../ui/*",
         "../../../ui/*",
         "../../../../ui/*"
+      ],
+      "@libs/*": [
+        "./libs/*",
+        "../libs/*",
+        "../../libs/*",
+        "../../../libs/*",
+        "../../../../libs/*"
       ]
     }
   },
