--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.8",
     "@reduxjs/toolkit": "^2.11.2",
+    "@vercel/analytics": "^1.6.1",
     "axios": "^1.13.5",
+    "dayjs": "^1.11.19",
     "firebase": "^12.9.0",
     "formik": "^2.4.9",
     "jsonwebtoken": "^9.0.3",
